--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -31,7 +31,7 @@
             >CONHECIMENTOS</a
           >
         </div>
-        <div class="links"><a href="#index">OBJETIVO</a></div>
+        <div class="links"><a href="objetivos.html">OBJETIVO</a></div>
       </div>
       <div class="content">
         <div class="nome">
