--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="links"><a href="index.html" style="text-shadow: 0 0 10px #47fd66; color: #47fd66"">SOBRE</a></div>
         <div class="links"><a href="conhecimentos.html">CONHECIMENTOS</a></div>
-        <div class="links"><a href="#index">OBJETIVO</a></div>
+        <div class="links"><a href="objetivos.html">OBJETIVO</a></div>
       </div>
       <div class="content">
         <div class="nome">
